# wobu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh  start_nvim_project.sh  valgrind.sup
assets/: entities.json  entity_templates.json
src/: app.c  app.h  bgw.c  bgw.h  calc.c  calc.h  colors.h  jsonffile.c  jsonffile.h  map.c  map.h  menuw.c  menuw.h  modelw.c  modelw.h  nk.h  propertiesw.c  propertiesw.h  statusw.c  statusw.h  tilesetw.c  tilesetw.h  toolsw.c  toolsw.h  txt.c  txt.h  wobu.c
